@@ -1,0 +1,5 @@
+from mod1 import func1, Class1
+from mod2 import (
+    func2,
+    Class2,
+)
